--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 </head>
 <body>
   <img src="Screenshot 2025-10-04 184152.png" alt="Screenshot 1" />
-  <img src="images/Screenshot 2025-10-04 184649.png" alt="Screenshot 2" />
-  <img src="images/Screenshot 2025-10-04 184915.png" alt="Screenshot 3" />
-  <img src="images/Screenshot 2025-10-04 185106.png" alt="Screenshot 4" />
+  <img src="Screenshot 2025-10-04 184649.png" alt="Screenshot 2" />
+  <img src="Screenshot 2025-10-04 184915.png" alt="Screenshot 3" />
+  <img src="Screenshot 2025-10-04 185106.png" alt="Screenshot 4" />
 </body>
 </html>
+
 
